Fix bread-top and cheese alignment issues

--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.css
@@ -4,6 +4,7 @@
     background: linear-gradient(#F08E4A, #e27b36);
     border-radius: 0 0 30px 30px;
     box-shadow: inset -15px 0 #c15711;
+    margin: 2% auto;
 }
 
 .BreadTop {
@@ -39,8 +40,8 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px 2px #c9c9c9;
-}
-
+  }
+  
 .Seeds1:before {
     content: "";
     width: 100%;
@@ -52,9 +53,9 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px -3px #c9c9c9;
-}
+  }
 
-.Seeds2 {
+  .Seeds2 {
     width: 10%;
     height: 15%;
     position: absolute;
@@ -64,9 +65,9 @@
     border-radius: 40%;
     transform: rotate(10deg);
     box-shadow: inset -3px 0 #c9c9c9;
-}
-
-.Seeds2:before {
+  }
+  
+  .Seeds2:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -77,23 +78,26 @@
     border-radius: 40%;
     transform: rotate(90deg);
     box-shadow: inset 1px 3px #c9c9c9;
-}
+  }
+  
 
 .Meat {
     width: 80%;
     height: 8%;
     background: linear-gradient(#7f3608, #702e05);
+    margin: 2% auto;
+    border-radius: 15px;
 }
 
 .Cheese {
     width: 90%;
     height: 4.5%;
     margin: 2% auto;
-    background: linear-gradient(#f5d004, #d6bb22);
+    background: linear-gradient(#f4d004, #d6bb22);
     border-radius: 20px;
 }
 
-.Lettuce {
+.Salad {
     width: 85%;
     height: 7%;
     margin: 2% auto;
